@@ -15,6 +15,7 @@ VERSION 2.9-Beta 1
      compilers currently supported by KDE.
 
   BUGFIXES:
+   * Prevent shared memory size errors for very large collections. (BR 327812)
    * Fix OpenGL related crash. (BR 327150)
    * Always show preview in Organize Files dialog, hide complicated options behind
      a button. (BR 327201)
